# cryptotrade

./: .gitignore  .travis.yml  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
cryptotrade/: config.py  exchange.py  polo_exchange.py  poloniex.py  trader.py  version.py
cryptotrade/_exchanges/: coin.py  polo.py
cryptotrade/cli/: assess_trade.py  balance.py  test.py  trade_assess.py  trade_base.py  trade_clear.py  trade_execute.py  worth.py
cryptotrade/cmd/: ct.py
cryptotrade/tests/: test_config.py  test_exchange.py  test_poloniex.py  test_trader.py  test_version.py
cryptotrade/tests/_exchanges/: test_poloniex.py
cryptotrade/tests/cmd/: test_ct.py
