[metadata]
name = cryptotrade
author = Ihar Hrachyshka
author-email = ihar.hrachyshka@gmail.com
summary = cryptotrade is an automation tool for cryptocurrency traders
description-file = README.rst
home-page = https://github.com/booxter/cryptotrade
license = MIT
classifier =
    Development Status :: 4 - Alpha
    Environment :: Console
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
keywords =
    setup
    distutils

[files]
packages =
    cryptotrade

[entry_points]
console_scripts =
    ct = cryptotrade.cmd.ct:main
ct.cli =
    balance = cryptotrade.cli.balance:BalanceCommand
    worth = cryptotrade.cli.worth:WorthCommand
    trade_assess = cryptotrade.cli.trade_assess:TradeAssessCommand
